# solana-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  release.yml
docs/: INCREMENTAL_INDEXING.md
src/solana_mcp/: __init__.py  cli.py  config.py  logging.py  models.py  server.py  versions.py
src/solana_mcp/expert/: __init__.py  guidance.py
src/solana_mcp/indexer/: __init__.py  chunker.py  compiler.py  downloader.py  embedder.py  manifest.py
src/solana_mcp/tools/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_incremental.py  test_manifest.py  test_security.py  test_server.py
