[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solana-mcp"
version = "0.1.0"
description = "RAG-powered MCP server for Solana runtime and SIMDs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "be.nvy" }
]
dependencies = [
    "mcp>=1.0.0",
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "click>=8.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-c>=0.20.0",  # For Firedancer C code parsing
    "gitpython>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
solana-mcp = "solana_mcp.cli:main"
sol-mcp = "solana_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/solana_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
